--- a/SpringBootAndSpringMVC/pom.xml
+++ b/SpringBootAndSpringMVC/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.softuni.exercise</groupId>
-	<artifactId>SpringBootAndSpringMVC</artifactId>
+	<artifactId>SpringBootAndSpringMVC__Pathfinder__</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SpringBootAndSpringMVC</name>
 	<description>Demo project for Spring Boot</description>
