--- a/SpringBootAndSpringMVC/src/main/resources/application.properties
+++ b/SpringBootAndSpringMVC/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.datasource.password=12345
 #JPA Properties
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=TRUE
-spring.jpa.hibernate.ddl-auto=update
-###Logging Levels
-# Disable the default loggers
-logging.level.org=WARN
-logging.level.blog=WARN
-#Show SQL executed with parameter bindings
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor=TRACE
+#spring.jpa.hibernate.ddl-auto=update
+####Logging Levels
+## Disable the default loggers
+#logging.level.org=WARN
+#logging.level.blog=WARN
+##Show SQL executed with parameter bindings
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor=TRACE
