--- a/LinkedOut/src/main/resources/application.properties
+++ b/LinkedOut/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=LinkedOut
+
+
+#Data Source Properties
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/super_market_data?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=12345
+#JPA Properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=TRUE
+spring.jpa.hibernate.ddl-auto=update
+###Logging Levels
+# Disable the default loggers
+logging.level.org=WARN
+logging.level.blog=WARN
+#Show SQL executed with parameter bindings
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor=TRACE
