--- a/LinkedOut/src/main/resources/application.properties
+++ b/LinkedOut/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=LinkedOut
 
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/super_market_data?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/linked_out_data?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=12345
 #JPA Properties
