--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.serS
 /FundamentalsMiniORM/.idea/
+
+/BookExersiceOneStream_API/.idea/.gitignore
+/BookExersiceOneStream_API/.gitignore
+/OnlineStore/.idea/.gitignore
+/BookExersiceOneStream_API/.idea/misc.xml
